--- a/templates/regist.html
+++ b/templates/regist.html
@@ -241,7 +241,7 @@ input {
 	
 </head>
 <body>
-
+<h3>Hi Update 1.0</h3>
 
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
